# DOCU_CHAT_REST_API

./: .dockerignore  Dockerfile  README.md  api.py  auth.py  ingest.py  main.py  pyproject.toml  rag_pipeline.py  rate_limiter.py  requirements.txt
app/: api.py  auth.py  ingest.py  rag_pipeline.py  rate_limiter.py
